# langlearner

./: .env.example  .gitignore  Dockerfile  compose.yml  pyproject.toml
multimodal/: distil_whisper_test.py  ollama.ipynb  streamlit_vision.py  vision_llm_gemini_voice_plus.py  vision_llm_gemini_voice_plus_simple.py  voice_assistant.py  voice_assistant.yaml
src/: config.py  config.yaml  frame_caputure.py  langlearner.py  llm_transcription.py  speech_to_text.py  text_to_speech.py
